# ingest-pdf

./: .coverage  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  RUNCONTEXT_IMPLEMENTATION.md  config.toml  coverage.xml  pyproject.toml
.claude/: settings.json
.claude/agents/: agent-creator.md  cicd-pipeline-expert.md  documentation-generator.md  task-verifier.md  uv-guardian.md  uv-guardian.yaml
.claude/agents/02-language-specialists/: python-pro.md
.claude/agents/05-data-ai/: data-engineer.md
.claude/agents/06-developer-experience/: documentation-engineer.md
.claude/hooks/: approve.sh  block-unless-approved.sh  pretool_require_agent.sh  pretool_uv_gate.sh  run-checks.sh  userprompt_inject_agents.sh
.claude/rules/: code-review.md  overview-to-tasks.md
.claude/templates/: PROJECT_OVERVIEW_template.md  task_templates.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: architecture_overview.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
data/: job.csv
docs/: INDEX.md  PROJECT_OVERVIEW.md  REQ_CLI.md  TASK-0001-initialize-uv-project-and-repo-scaffolding.md  TASK-0002-implement-config-toml-loader-with-hot-reload.md  TASK-0003-watcher-with-stable-file-debounce-single-dir-pattern-from-config.md  TASK-0004-sha256-hasher-and-json-ledger-idempotency.md  TASK-0005-llamaparse-client-with-retries-and-backoff.md  TASK-0006-redaction-stage-mask-account-numbers-to-last-4.md  TASK-0007-output-writers-with-atomic-writes-and-templates.md  TASK-0008-dispatcher-with-max-workers-10-and-bounded-queue.md  TASK-0009-move-processed-to-processed-and-quarantine-failures.md  TASK-0010-logging-with-daily-rotation-in-logs-info-error.md  TASK-0011-run-reporter-append-only-jsonl-and-latest-summary.md  TASK-0012-cli-watch-ingest-once-reprocess-dry-run.md  TASK-0014-end-to-end-integration-test-happy-path.md
docs/summaries/tasks/: TASK-0001-summary.md
scripts/: verify-uv-setup.sh
src/: cli.py  main.py  test_cuid.py
src/config/: __init__.py  _merge.py  loader.py
src/ingest_pdf/: __init__.py  config.py  exceptions.py  extractor.py  main.py  processor.py
src/pdf_extract/: cli.py  init.py
src/pdf_ingestion/: ingest.py  models.py
src/utils/: context.py  logger.py
tests/: conftest.py  test_config.py  test_extractor.py  test_main.py  test_processor.py
